Corrigindo metodos do `WorkerRepository`, refatorando e corrigindo metodo `selectWorker`