@@ -3,12 +3,12 @@ package apisemaperreio.escalante.service;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 
 import org.springframework.stereotype.Service;
 
+import apisemaperreio.escalante.dto.ScheduledWorkerDTO;
 import apisemaperreio.escalante.model.ScheduleType;
 import apisemaperreio.escalante.model.ScheduledWorker;
 import apisemaperreio.escalante.model.Worker;
@@ -27,19 +27,7 @@ public class ScheduledWorkerService extends BaseService {
     // private final WorkerPositionRepository positionRepo;
     private final WorkerRoleRepository roleRepo;
 
-    public List<ScheduledWorker> getAll() {
-        return scheduledRepo.findAll();
-    }
-
-    public List<Worker> getAvailableWorkers(LocalDate date, Integer positionId, Boolean driver) {
-        return workerRepo.findAvailableWorkers(date, positionId, driver);
-    }
-
-    public List<Worker> getAvailableDrivers(LocalDate date) {
-        return workerRepo.findAvailableDrivers(date);
-    }
-
-    public Optional<ScheduleType> checkScheduleType(Worker worker) {
+    private Optional<ScheduleType> checkScheduleType(Worker worker) {
         var workerScheduleType = Optional.ofNullable(worker.getScheduleType());
         var positionScheduleType = Optional.ofNullable(worker.getPosition().getScheduleType());
         if (workerScheduleType.isEmpty() && positionScheduleType.isEmpty()) {
@@ -54,39 +42,27 @@ public class ScheduledWorkerService extends BaseService {
         return positionScheduleType;
     }
 
-    public ScheduledWorker dateLastWorked(Worker worker) {
+    private ScheduledWorker lastWork(Worker worker) {
         var workedDays = new ArrayList<>(worker.getScheduledWorkers());
         workedDays.sort(Comparator.comparing(ScheduledWorker::getDate).reversed());
-        return workedDays.get(0);
+        return workedDays.getFirst();
     }
 
-    public Optional<Worker> notScheduledWorker(List<Worker> workers) {
-        var notScheduleds = new LinkedList<Worker>();
-        for (int i = workers.size() - 1; i >= 0; i--) {
-            if (!workers.get(i).getScheduledWorkers().isEmpty()) {
-                break;
-            }
-            notScheduleds.addFirst(workers.get(i));
-        }
-        return Optional.ofNullable(notScheduleds.peekFirst());
-    }
-
-    public Optional<Worker> selectWorker(LocalDate date, List<Worker> workers) {
-        var notScheduled = notScheduledWorker(workers);
-        if (notScheduled.isPresent()) {
-            return notScheduled;
-        }
+    private Optional<Worker> selectWorker(LocalDate date, List<Worker> workers) {
         for (var worker : workers) {
+            if (worker.getScheduledWorkers().isEmpty()) {
+                return Optional.of(worker);
+            }
             var scheduleType = checkScheduleType(worker);
-            var dateLastWorked = dateLastWorked(worker);
+            var lastWork = lastWork(worker);
             if (scheduleType.isPresent()
-                    && (scheduleType.get().getDaysOff() > dateLastWorked.getRole().getScheduleType().getDaysOff())) {
-                if (dateLastWorked.getDate().plusDays(scheduleType.get().getDaysOff() + 1).isAfter(date)) {
+                    && (scheduleType.get().getDaysOff() > lastWork.getRole().getScheduleType().getDaysOff())) {
+                if (lastWork.getDate().plusDays(scheduleType.get().getDaysOff() + 1).isAfter(date)) {
                     continue;
                 }
                 return Optional.of(worker);
             }
-            if (dateLastWorked.getDate().plusDays(dateLastWorked.getRole().getScheduleType().getDaysOff() + 1)
+            if (lastWork.getDate().plusDays(lastWork.getRole().getScheduleType().getDaysOff() + 1)
                     .isAfter(date)) {
                 continue;
             }
@@ -95,7 +71,31 @@ public class ScheduledWorkerService extends BaseService {
         return Optional.empty();
     }
 
-    public List<ScheduledWorker> scheduler(LocalDate startDate, LocalDate endDate) {
+    public List<ScheduledWorker> scheduledWorkersDay(Optional<Worker> worker, LocalDate date, List<WorkerRole> roles,
+            WorkerRole role, Integer daysWork) {
+        var scheduledWorkersDay = new ArrayList<ScheduledWorker>();
+        LocalDate newDate = date.plusDays(0);
+        for (int i = 1; i <= daysWork; i++) {
+            var scheduledWorker = ScheduledWorker.builder()
+                    .date(newDate)
+                    .worker(worker.orElseThrow())
+                    .role(role)
+                    .build();
+            scheduledWorkersDay.add(scheduledWorker);
+            if (i > 1 && i % 2 == 0) {
+                if (role.getPriority() == 2) {
+                    scheduledWorkersDay.getLast().setRole(roles.get(3));
+                } else if (role.getPriority() == 3) {
+                    scheduledWorkersDay.getLast().setRole(roles.get(2));
+                }
+
+            }
+            newDate = newDate.plusDays(1);
+        }
+        return scheduledWorkersDay;
+    }
+
+    public List<ScheduledWorkerDTO> scheduler(LocalDate startDate, LocalDate endDate, Integer daysWork) {
         var scheduledWorkers = new ArrayList<ScheduledWorker>();
         var roles = roleRepo.findAll();
         roles.sort(Comparator.comparing(WorkerRole::getPriority));
@@ -103,14 +103,10 @@ public class ScheduledWorkerService extends BaseService {
             for (var role : roles) {
                 switch (role.getPriority()) {
                     case 1:
-                        // TODO: Código para escolher o motorista
-                        var driver = selectWorker(startDate, workerRepo.findAvailableDrivers(startDate));
-                        var scheduledWorker = ScheduledWorker.builder()
-                            .date(startDate)
-                            .worker(driver.orElseThrow())
-                            .role(role)
-                            .build();
-                        scheduledWorkers.add(scheduledWorker);
+                        var worker = selectWorker(startDate, workerRepo.findAvailableDrivers(startDate));
+                        var scheduledWorkersDay = scheduledWorkersDay(worker, startDate, roles, role, daysWork);
+                        scheduledWorkers.addAll(scheduledWorkersDay);
+                        scheduledRepo.saveAll(scheduledWorkersDay);
                         break;
                     case 2:
                         // TODO: Código para escolher o permanente
@@ -128,10 +124,15 @@ public class ScheduledWorkerService extends BaseService {
                         break;
                 }
             }
-            startDate = startDate.plusDays(1);
+            startDate = startDate.plusDays(daysWork);
         }
-        scheduledRepo.saveAll(scheduledWorkers);
-        return scheduledWorkers;
+        return scheduledWorkers.stream().map(this::scheduledWorkertoDto).toList();
+    }
+
+    public List<ScheduledWorkerDTO> getAllScheduledWorkers() {
+        var scheduledWorkers = scheduledRepo.findAll();
+        scheduledWorkers.sort(Comparator.comparing(ScheduledWorker::getDate).reversed());
+        return scheduledWorkers.stream().map(this::scheduledWorkertoDto).toList();
     }
 
 }
